<resources>
    <string name="app_name">RCSLS</string>
    <string name="rock">Piedra</string>
    <string name="paper">Papel</string>
    <string name="scissors">Tijeras</string>
    <string name="lizard">Lagarto</string>
    <string name="Spock">Spock</string>
    <string name="vs">VS</string>
    <string name="retry">Volver a Intentar</string>
    <string name="exit">Salir</string>
</resources>